build general framework

--- a/src/layouts/PageLayoutSplit.astro
+++ b/src/layouts/PageLayoutSplit.astro
@@ -69,7 +69,7 @@ const hasBlocks = blocks && blocks.length > 0;
         }
 
         <div
-          class="page-split__title absolute inset-0 z-10 grid place-items-center"
+          class="page-split__title absolute inset-x-0 top-10 z-10 grid place-items-start pt-12"
         >
           <div class="w-full">
             {
